# Callscribe

./: Cargo.toml  README.md
src/: cli.rs  csv_out.rs  csv_sink.rs  errors.rs  event_stream.rs  filter.rs  main.rs  model.rs  record_match.rs  rle_filter.rs  srt.rs  srt_stream.rs  transcriber.rs  transcription_adder.rs
