[package]
name = "dsd_event_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
argparse = "0.2"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.8"
env_logger = "0.11"
log = "0.4"
regex = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-util = { version = "0.7", features = ["compat"] }
csv-async = "1"
thiserror = "2"
walkdir = "2.5.0"